--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -92,34 +92,34 @@ jobs:
               with:
                   ref: ${{ github.event.pull_request.merge_commit_sha }}
                   fetch-depth: 0
-            - name: Check if tag exists
-              id: tag_check
+
+            - name: Check for existing tags
+              id: check-tags
               run: |
-                  TAG_EXISTS=$(git tag -l "v*")
-                  if [ -n "$TAG_EXISTS" ]; then
-                      echo "Tag v already exists. Skipping tag creation."
-                      echo "tag_exists=true" >> $GITHUB_ENV
+                  if git show-ref --tags | grep -q 'refs/tags/v'; then
+                    echo "tag_exists=true" >> $GITHUB_OUTPUT
+                    echo "Existing version tags found"
                   else
-                      echo "Tag v does not exist. Proceeding with tag creation."
-                      echo "tag_exists=false" >> $GITHUB_ENV
+                    echo "tag_exists=false" >> $GITHUB_OUTPUT
+                    echo "No version tags found"
+                  fi
 
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            - name: Bump version (if no tags exist)
+              if: steps.check-tags.outputs.tag_exists == 'false'
+              id: bump-version
+              uses: anothrNick/github-tag-action@v1
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  default-bump: patch
+                  with-v: false
 
-              continue-on-error: true
-            - name: Bump version
-              if: env.tag_exists == 'false'
-              id: version
-              uses: anothrNick/github-tag-action@8c8163ef62cf9c4677c8e800f36270af27930f42
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  DEFAULT_BUMP: patch
-                  WITH_V: false
-            - name: Create new tag if it doesn't exist
-              if: env.tag_exists == 'false'
+            - name: Create new tag
+              if: steps.check-tags.outputs.tag_exists == 'false'
               run: |
-                  git tag "v${{ steps.version.outputs.new_tag }}"
-                  git push origin "v${{ steps.version.outputs.new_tag }}"
+                  git config --global user.name "GitHub Actions"
+                  git config --global user.email "actions@github.com"
+                  git tag "v${{ steps.bump-version.outputs.new_tag }}"
+                  git push origin "v${{ steps.bump-version.outputs.new_tag }}"
 
     health_check:
         if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
